tests/ui/symbol-names/issue-60925.legacy.stderr
error: symbol-name(_ZN11issue_609253foo37Foo$LT$issue_60925..llv$u6d$..Foo$GT$3foo17hd1fa6ea44e103983E)
  --> $DIR/issue-60925.rs:21:9
   |
LL |         #[rustc_dump_symbol_name]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^

error: demangling(issue_60925::foo::Foo<issue_60925::llvm::Foo>::foo::hd1fa6ea44e103983)
  --> $DIR/issue-60925.rs:21:9
   |
LL |         #[rustc_dump_symbol_name]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^

error: demangling-alt(issue_60925::foo::Foo<issue_60925::llvm::Foo>::foo)
  --> $DIR/issue-60925.rs:21:9
   |
LL |         #[rustc_dump_symbol_name]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 3 previous errors

